@@ -56,6 +56,7 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     btowc
     cabs
     cabsf
+    cabsl
     cacos
     cacosf
     cacosh
@@ -94,6 +95,7 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     chown
     cimag
     cimagf
+    cimagl
     clearerr
     clock
     clock_getcpuclockid
@@ -122,6 +124,7 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     cprojf
     creal
     crealf
+    creall
     creat
     crypt			(available in external "crypt" library)
     csin
@@ -341,6 +344,7 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     htons
     hypot
     hypotf
+    hypotl
     iconv			(available in external "libiconv" library)
     iconv_close			(available in external "libiconv" library)
     iconv_open			(available in external "libiconv" library)
@@ -792,6 +796,7 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     sprintf
     sqrt
     sqrtf
+    sqrtl
     srand
     srand48
     srandom
@@ -1012,6 +1017,7 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     fgetc_unlocked
     finite
     finitef
+    finitel
     fiprintf
     flock			(see chapter "Implementation Notes")
     forkpty
@@ -1367,7 +1373,6 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     atan2l
     atanhl
     atanl
-    cabsl
     cacoshl
     cacosl
     cargl
@@ -1379,7 +1384,6 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     ccosl
     ceill
     cexpl
-    cimagl
     clogl
     conjl
     copysignl
@@ -1387,7 +1391,6 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     cosl
     cpowl
     cprojl
-    creall
     csinhl
     csinl
     csqrtl
@@ -1419,7 +1422,6 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     getnetbyname
     getnetent
     getpmsg
-    hypotl
     ilogbl
     isalnum_l
     isalpha_l
@@ -1488,7 +1490,6 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     sigtimedwait
     sinhl
     sinl
-    sqrtl
     strcasecmp_l
     strcoll_l
     strfmon_l
